peliculas - pelicula -cines funcionando

--- a/cines.html
+++ b/cines.html
@@ -53,7 +53,10 @@
 			</div>
 			<div class="contenido-interno" id="contenido-interno">
 
-				
+				<script type="module">
+					import {getCines} from "/js/cines.js"
+					getCines()
+				</script>
 
 			</div>
 		</div>
