--- a/cine.html
+++ b/cine.html
@@ -53,7 +53,10 @@
 			</div>
 			<div class="contenido-interno" id="contenido-interno">
 
-				
+				<script type="module">
+					import {getCine} from "/js/cine.js"
+					getCine()
+				</script>
 				
 			</div>
 		</div>
